// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Avatar examples snapshots AsButtonAvatarComponent should render correctly 1`] = `
<div>
  <button
    aria-describedby="badge-default"
    aria-label="notifications"
    buttoncolor="tertiary"
    buttonsize="large"
    class="v-avatar v-button v-button-icon v-button-large v-button-tertiary"
    type="button"
    v-avatar=""
    v-button-icon=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-account v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      v-icon-visa-account-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
      />
    </svg>
    <sup
      badgetype="number"
      class="v-badge v-badge-number"
      id="badge-default"
      v-badge=""
    >
      3
    </sup>
  </button>
</div>
`;

exports[`Avatar examples snapshots InlineDirectiveAvatarComponent should render correctly 1`] = `
<div>
  <svg
    aria-hidden="false"
    aria-label="Alex Miller"
    class="v-avatar v-icon v-icon-account v-icon-low v-icon-visa"
    focusable="false"
    height="24"
    role="img"
    v-avatar=""
    v-icon-visa-account-low=""
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      class="v-icon-secondary"
      d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
    />
    <path
      class="v-icon-primary"
      d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
    />
  </svg>
</div>
`;

exports[`Avatar examples snapshots LargeFictitiousBrandAvatarComponent should render correctly 1`] = `
<div>
  <div
    aria-label="Fictitious brand"
    class="v-avatar brand-avatar"
    role="img"
    v-avatar=""
  >
    D
  </div>
</div>
`;

exports[`Avatar examples snapshots LargeIconAvatarComponent should render correctly 1`] = `
<div>
  <span
    aria-label="Alex Miller"
    class="v-avatar"
    role="img"
    v-avatar=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-account v-icon-low v-icon-visa"
      focusable="false"
      height="24"
      v-icon-visa-account-low=""
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        class="v-icon-secondary"
        d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Avatar examples snapshots LargeImageAvatarComponent should render correctly 1`] = `
<div>
  <img
    alt="Alex Miller"
    class="v-avatar"
    src="imgs/alex-miller-stock.png"
    v-avatar=""
  />
</div>
`;

exports[`Avatar examples snapshots LargeInitialsAvatarComponent should render correctly 1`] = `
<div>
  <span
    aria-label="Alex Miller"
    class="v-avatar"
    role="img"
    v-avatar=""
  >
    AM
  </span>
</div>
`;

exports[`Avatar examples snapshots SmallHorizontalIconAvatarComponent should render correctly 1`] = `
<div>
  <div
    class="v-tab"
    style="--v-dropdown-menu-surface-margin-block-start: 0;"
    v-floating-ui-container=""
    v-tab-item=""
  >
    <button
      aria-controls="a-v-floating-ui-element-0"
      aria-expanded="false"
      aria-label="Alex Miller"
      buttoncolor="tertiary"
      buttonsize="large"
      class="v-button v-dropdown v-button-large v-button-tertiary"
      type="button"
      v-button=""
      v-floating-ui-trigger=""
    >
      <svg
        aria-hidden="true"
        class="v-avatar v-icon v-icon-account v-icon-low v-icon-visa"
        focusable="false"
        height="24"
        role="img"
        v-avatar=""
        v-icon-visa-account-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-secondary"
          d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
        />
        <path
          class="v-icon-primary"
          d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
        />
      </svg>
      <v-icon-visa-toggle
        class="v-icon v-icon-tiny v-tab-suffix"
        style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
      >
        
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa v-tab-suffix"
          focusable="false"
          height="16"
          v-icon-visa-chevron-down-tiny=""
          v-toggle-default-template=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
          />
        </svg>
        
      </v-icon-visa-toggle>
    </button>
    <div
      aria-hidden="true"
      class="v-dropdown-menu v-surface v-flex v-flex-col v-p-4"
      id="a-v-floating-ui-element-0"
      style="inline-size: 180px; --v-dropdown-menu-surface-margin-block-start: 0; position: absolute; top: 0px; left: 0px; display: none; z-index: 200;"
      v-dropdown-menu=""
      vflex=""
      vflexcol=""
      vp="4"
    >
      <a
        buttoncolor="tertiary"
        buttonsize="large"
        class="v-button v-button-large v-button-tertiary v-flex v-flex-row v-justify-content-start v-typography-label-large"
        href="./components/avatar"
        type="button"
        v-button=""
        vflex=""
        vjustifycontentstart=""
        vtypography="label-large"
      >
        L2 label 1 
      </a>
      <button
        buttoncolor="tertiary"
        buttonsize="large"
        class="v-button v-button-large v-button-tertiary v-flex v-flex-row v-justify-content-start v-typography-label-large"
        href="./components/avatar"
        type="button"
        v-button=""
        vflex=""
        vjustifycontentstart=""
        vtypography="label-large"
      >
         L2 label 2 
      </button>
    </div>
  </div>
</div>
`;

exports[`Avatar examples snapshots SmallImageAvatarComponent should render correctly 1`] = `
<div>
  <img
    alt="Alex Miller"
    class="v-avatar v-avatar-small"
    small=""
    src="imgs/alex-miller-stock.png"
    v-avatar=""
  />
</div>
`;

exports[`Avatar examples snapshots SmallInitialsAvatarComponent should render correctly 1`] = `
<div>
  <span
    aria-label="Alex Miller"
    class="v-avatar v-avatar-small"
    role="img"
    small=""
    v-avatar=""
  >
    AM
  </span>
</div>
`;

exports[`Avatar examples snapshots SmallVerticalIconAvatarComponent should render correctly 1`] = `
<div>
  <div
    class="v-nav v-nav-vertical"
    v-nav=""
    vertical=""
  >
    <div
      class="v-tabs v-tabs-vertical"
      v-tabs=""
      vertical=""
    >
      <div
        class="v-tab"
        disclosuretab=""
        v-tab-item=""
      >
        <button
          aria-expanded="false"
          aria-label="Alex Miller"
          buttoncolor="tertiary"
          buttonsize="large"
          class="v-button v-button-large v-button-tertiary"
          type="button"
          v-button=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-account v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            v-icon-visa-account-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-secondary"
              d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
            />
            <path
              class="v-icon-primary"
              d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
            />
          </svg>
          <v-icon-visa-toggle
            class="v-icon v-icon-tiny v-tab-suffix"
            style="align-items: center; justify-content: center; pointer-events: none; --v-icon-primary: inherit; --v-icon-secondary: inherit;"
          >
            
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-down v-icon-tiny v-icon-visa v-tab-suffix"
              focusable="false"
              height="16"
              v-icon-visa-chevron-down-tiny=""
              v-toggle-default-template=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
            
          </v-icon-visa-toggle>
        </button>
        
      </div>
    </div>
  </div>
</div>
`;
